--- a/Dockerfile_Native
+++ b/Dockerfile_Native
@@ -1,51 +1,59 @@
 #LINUX AMD64 && ARM64
+# Oracle Images: https://github.com/graalvm/container/tree/master/graalvm-community
 FROM debian:bookworm-slim AS graalvm_setup
-
 ENV GRAALVM_HOME="/usr/local/graalvm"
 ENV JAVA_VERSION="21"
 
+# Releases: https://github.com/graalvm/graalvm-ce-builds/releases/
 ENV AMD64="https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-x64_bin.tar.gz"
 ENV ARM64="https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-aarch64_bin.tar.gz"
 
-# install GraalVM + prerequisites (native-image reqs from official docs)
+# Prerequisites: https://www.graalvm.org/latest/reference-manual/native-image/#prerequisites
+# locales && locales-all: https://github.com/oracle/graal/issues/8792#issuecomment-2189166038 (java commands such as Path.resolve() fail without it when locating special chars in the path)
 RUN set -eux; \
-    GRAALVM_DOWNLOAD_URL=$(if [ "$(uname -m)" = "aarch64" ]; then echo "${ARM64}"; else echo "${AMD64}"; fi); \
-    apt-get update; \
-    apt-get install -y --no-install-recommends curl ca-certificates locales locales-all build-essential zlib1g-dev libz-dev maven; \
-    mkdir -p "${GRAALVM_HOME}"; \
-    curl -sSL -o graalvm.tar.gz "${GRAALVM_DOWNLOAD_URL}"; \
-    tar -zxf graalvm.tar.gz -C "${GRAALVM_HOME}" --strip-components 1; \
-    rm -f graalvm.tar.gz; \
-    apt-get clean; \
-    rm -rf /var/lib/apt/lists/*
+    GRAALVM_DOWNLOAD_URL=$(if [ "$(uname -m)" = "aarch64" ]; then echo "${ARM64}"; else echo "${AMD64}"; fi) \
+	&& mkdir -p "${GRAALVM_HOME}" \
+    && apt-get -y update \
+    && apt-get -y install curl \
+    && apt-get -y install locales locales-all \
+    && apt-get -y install --no-install-recommends build-essential libz-dev zlib1g-dev \
+    && curl -sSL -o graalvm.tar.gz ${GRAALVM_DOWNLOAD_URL} \
+    && tar -zxf graalvm.tar.gz -C "${GRAALVM_HOME}" --strip-components 1 \
+    && rm -f graalvm.tar.gz \
+	&& apt-get -y clean \
+	&& rm -rf /var/lib/apt/lists/*
 
-ENV PATH="${GRAALVM_HOME}/bin:${PATH}"
-ENV JAVA_HOME="${GRAALVM_HOME}"
-
+# COPY THE SOURCES
 FROM graalvm_setup AS copy_sources
-WORKDIR /build
-COPY pom.xml .
 COPY src ./src
-COPY AGENTS.md README.md ./
+COPY .mvn ./.mvn
+COPY mvnw pom.xml ./
 
+# BUILD THE NATIVE IMAGE
+# [SYSTEM] docker build -t app-native -f Dockerfile .
+# [ARCH] docker buildx build --platform linux/amd64 -t app-native -f Dockerfile --load .
 FROM copy_sources AS native_build
+
 ENV LC_ALL=en_US.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 
-# build + smoke-test the native executable
-RUN mvn -B -q -DskipTests -Pnative clean package \
-    && printf '<html><body><p>native-ok</p></body></html>' > /tmp/sample.html \
-    && ./target/email-html-validator.native /tmp/sample.html --output-dir /tmp/native-report \
-    && test -f /tmp/native-report/report.json
+RUN (chmod +x mvnw && JAVA_HOME="${GRAALVM_HOME}" ./mvnw clean package -B -q -DskipTests -Pnative) && /target/email-html-validator.native -Dadc_output_dir=/target/generated_api -Dadc_work_dir=/src/test/resources/files
 
+# USED TO EXPORT THE NATIVE IMAGE
+# [SYSTEM] docker build -t app-native -f Dockerfile . && docker build --target export . --output target
+# [ARCH] docker buildx build --platform linux/amd64 --output type=docker -t app-native -f Dockerfile . && docker buildx build --platform linux/arm64 --target export .  --output target
 FROM scratch AS export
-COPY --from=native_build /build/target/*.native /email-html-validator.native
+COPY --from=native_build ./target/*.native ./app.native
 
+# RUN THE NATIVE IMAGE
+# [SYSTEM] docker build -t app-native -f Dockerfile . && docker run --rm -p 8080:8080 app-native
+# [ARCH] docker buildx build --platform linux/amd64 -t app-native -f Dockerfile --load . && docker run --rm -p 8080:8080 app-native
 FROM debian:bookworm-slim AS native_image
-WORKDIR /app
-COPY --from=native_build /build/target/*.native /email-html-validator.native
+COPY --from=native_build ./target/*.native ./app.native
+
 ENV LC_ALL=en_US.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
-ENTRYPOINT ["/email-html-validator.native"]
+EXPOSE 8080
+ENTRYPOINT ["./app.native"]
