--- a/src/main/resources/META-INF/native-image/org.nanonative/email-html-validator/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/org.nanonative/email-html-validator/reflect-config.json
@@ -181,6 +181,12 @@
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
 {
+  "name":"com.microsoft.playwright.APIRequestContext$DisposeOptions",
+  "allDeclaredFields":true,
+  "allDeclaredConstructors":true,
+  "methods":[{"name":"<init>","parameterTypes":[] }]
+},
+{
   "name":"com.microsoft.playwright.options.Geolocation",
   "allDeclaredFields":true,
   "methods":[{"name":"<init>","parameterTypes":[] }]
