--- a/Dockerfile_Native
+++ b/Dockerfile_Native
@@ -1,6 +1,6 @@
 #LINUX AMD64 && ARM64
 # Oracle Images: https://github.com/graalvm/container/tree/master/graalvm-community
-FROM debian:bookworm-slim AS graalvm_setup
+FROM debian:stable-slim AS graalvm_setup
 ENV GRAALVM_HOME="/usr/local/graalvm"
 ENV JAVA_VERSION="21"
 
@@ -38,7 +38,7 @@ ENV LC_ALL=en_US.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 
-RUN (chmod +x mvnw && JAVA_HOME="${GRAALVM_HOME}" ./mvnw clean package -B -q -DskipTests -Pnative) && /target/email-html-validator.native -Dadc_output_dir=/target/generated_api -Dadc_work_dir=/src/test/resources/files
+RUN (chmod +x mvnw && JAVA_HOME="${GRAALVM_HOME}" ./mvnw clean package -B -q -DskipTests -Pnative)
 
 # USED TO EXPORT THE NATIVE IMAGE
 # [SYSTEM] docker build -t app-native -f Dockerfile . && docker build --target export . --output target
@@ -49,11 +49,33 @@ COPY --from=native_build ./target/*.native ./app.native
 # RUN THE NATIVE IMAGE
 # [SYSTEM] docker build -t app-native -f Dockerfile . && docker run --rm -p 8080:8080 app-native
 # [ARCH] docker buildx build --platform linux/amd64 -t app-native -f Dockerfile --load . && docker run --rm -p 8080:8080 app-native
-FROM debian:bookworm-slim AS native_image
+FROM debian:stable-slim AS native_image
 COPY --from=native_build ./target/*.native ./app.native
+
+ENV PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
+ENV PLAYWRIGHT_CLI_DIR=/opt/playwright-cli/driver
+
+########## SETUP PLAYWRIGHT DEPENDENCIES START ##########
+RUN apt-get update && apt-get install -y --no-install-recommends \
+      ca-certificates \
+      curl \
+      unzip \
+    && rm -rf /var/lib/apt/lists/* \
+    && PLAYWRIGHT_VERSION=$(/app.native --playwright-version | awk '{print $3}') \
+    && curl -fsSL "https://repo1.maven.org/maven2/com/microsoft/playwright/driver-bundle/${PLAYWRIGHT_VERSION}/driver-bundle-${PLAYWRIGHT_VERSION}.jar" -o driver-bundle.jar \
+    && unzip -q driver-bundle.jar "driver/linux$([ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ] && echo '-arm64')/*" -d /tmp/pw \
+    && mkdir -p ${PLAYWRIGHT_CLI_DIR} \
+    && mv /tmp/pw/driver/linux*/* ${PLAYWRIGHT_CLI_DIR}/ \
+    && ${PLAYWRIGHT_CLI_DIR}/node ${PLAYWRIGHT_CLI_DIR}/package/cli.js install chromium --only-shell --with-deps  \
+    && apt-get purge -y --auto-remove curl unzip \
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/* cp.txt playwright.jar driver.jar driver-bundle.jar /tmp/pw
+########## SETUP PLAYWRIGHT DEPENDENCIES END ##########
+
+# Validate
+RUN /app.native '<title>aa</title><div style="color:black;"><img>'
 
 ENV LC_ALL=en_US.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 EXPOSE 8080
-ENTRYPOINT ["./app.native"]
+ENTRYPOINT ["/app.native"]
