--- a/.github/workflows/java_build.yml
+++ b/.github/workflows/java_build.yml
@@ -42,6 +42,7 @@ jobs:
           fetch-depth: 1
           ref: ${{ inputs.ref || github.ref || github.ref_name || github.head_ref }}
           token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          submodules: true
       - name: "♻️ Restore cache [unix-build-${{ hashFiles('**/pom.xml', '**/build.gradle*') }}]"
         uses: actions/cache@v4
         with:
@@ -60,6 +61,9 @@ jobs:
         with:
           java-version: ${{ steps.java_info.outputs.java_version }}
           distribution: 'temurin'
+      - name: "🧱 Install Playwright system dependencies"
+        run: |
+          ${{ steps.java_info.outputs.cmd }} -B -q exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps"
       - name: "🗒️ Maven License Info"
         id: "license_info"
         uses: YunaBraska/maven-license-info-action@main
