feat: polish release flow and document internals

--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -218,10 +218,77 @@ jobs:
           name: ${{ steps.artifact.outputs.filename }}
           path: ${{ steps.artifact.outputs.filename }}
           if-no-files-found: 'error'
+  deploy:
+    name: "Deploy Libraries"
+    needs: [ jar, linux, macos, windows ]
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: "🧑‍💻 Checkout [${{ inputs.ref || github.ref || github.ref_name || github.head_ref }}]"
+        uses: actions/checkout@main
+        with:
+          fetch-depth: 1
+          ref: ${{ inputs.ref || github.ref || github.ref_name || github.head_ref }}
+          token: ${{ secrets.BOT_TOKEN || secrets.GITHUB_TOKEN }}
+
+      - name: "♻️ Restore cache [unix-build-${{ hashFiles('**/pom.xml', '**/build.gradle*') }}]"
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.m2
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            ~/.cache/ms-playwright
+          key: unix-build-${{ hashFiles('**/pom.xml', '**/build.gradle*') }}
+          restore-keys: unix-build-${{ hashFiles('**/pom.xml', '**/build.gradle*') }}
+
+      - name: "🔍 Read Java Info"
+        id: java_info_deploy
+        uses: YunaBraska/java-info-action@main
+
+      - name: "🗒️ Align version [${{ needs.linux.outputs.version }}]"
+        run: ./mvnw versions:set -DnewVersion="${{ inputs.version || needs.linux.outputs.version }}" -DgenerateBackupPoms=false -B -q
+
+      - name: "☕ Setup Java for GitHub Packages"
+        uses: actions/setup-java@v5
+        with:
+          java-version: ${{ steps.java_info_deploy.outputs.java_version }}
+          distribution: 'temurin'
+          server-id: github
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
+          gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
+          gpg-passphrase: ${{ secrets.GPG_SIGNING_KEY && 'GPG_PASSPHRASE' || '' }}
+
+      - name: "📦 Deploy to GitHub Packages"
+        run: ${{ steps.java_info_deploy.outputs.cmd }} deploy -Dmaven.test.skip=true -B -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+
+      - name: "☕ Setup Java for Maven Central"
+        uses: actions/setup-java@v5
+        with:
+          java-version: ${{ steps.java_info_deploy.outputs.java_version }}
+          distribution: 'temurin'
+          server-id: central
+          server-username: OSSH_USER
+          server-password: OSSH_PASS
+          gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
+          gpg-passphrase: ${{ secrets.GPG_SIGNING_KEY && 'GPG_PASSPHRASE' || '' }}
+
+      - name: "🌐 Deploy to Maven Central"
+        run: ${{ steps.java_info_deploy.outputs.cmd }} deploy -P release -Dmaven.test.skip=true -B
+        env:
+          OSSH_USER: ${{ secrets.OSSH_USER }}
+          OSSH_PASS: ${{ secrets.OSSH_PASS }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+
   release:
     name: "Release"
     timeout-minutes: 5
-    needs: [ jar, linux, macos, windows ]
+    needs: [ jar, linux, macos, windows, deploy ]
     runs-on: ubuntu-latest
     steps:
       - name: "💾 Download Artifacts"
@@ -240,4 +307,3 @@ jobs:
           tag: ${{ needs.linux.outputs.version }}
           name: ${{ needs.linux.outputs.version }}
           artifacts: ${{ github.event.repository.name }}-*.native,${{ github.event.repository.name }}-*.exe,${{ github.event.repository.name }}-*.jar
-
