--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.nanonative</groupId>
+    <groupId>berlin.yuna</groupId>
     <artifactId>email-html-validator</artifactId>
     <version>2025.11.3221648</version>
     <packaging>jar</packaging>
@@ -245,7 +245,7 @@
                         <version>${native-maven-plugin.version}</version>
                         <configuration>
                             <imageName>${project.artifactId}.native</imageName>
-                            <mainClass>org.nanonative.cli.EmailHtmlValidatorCli</mainClass>
+                            <mainClass>berlin.yuna.ehv.cli.EmailHtmlValidatorCli</mainClass>
                             <buildArgs>
                                 <!-- Reduces the image size - Ensures the native image doesn't include the JVM as a fallback option -->
                                 <buildArg>--no-fallback</buildArg>
