--- a/src/main/resources/META-INF/native-image/org.nanonative/email-html-validator/jni-config.json
+++ b/src/main/resources/META-INF/native-image/org.nanonative/email-html-validator/jni-config.json
@@ -12,7 +12,7 @@
   "methods":[{"name":"getProperty","parameterTypes":["java.lang.String"] }, {"name":"setProperty","parameterTypes":["java.lang.String","java.lang.String"] }]
 },
 {
-  "name":"org.nanonative.cli.EmailHtmlValidatorCli",
+  "name":"berlin.yuna.cli.EmailHtmlValidatorCli",
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 }
 ]
