--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <native-maven-plugin.version>0.10.2</native-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
@@ -130,6 +131,39 @@
                     <target>${java.version}</target>
                     <release>${java.version}</release>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <nodeprecatedlist>true</nodeprecatedlist>
+                            <quiet>true</quiet>
+                            <!-- disable strict checking -->
+                            <doclint>none</doclint>
+                            <failOnError>false</failOnError>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -287,7 +321,9 @@
                 </plugins>
             </build>
         </profile>
+    <!-- MAVEN CENTRAL USAGE -->
         <profile>
+            <!-- mvn clean deploy -P release -->
             <id>release</id>
             <activation>
                 <property>
@@ -298,6 +334,7 @@
             </activation>
             <build>
                 <plugins>
+                    <!-- QUALITY GATE -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
@@ -311,6 +348,8 @@
                                 </goals>
                                 <configuration>
                                     <gpgArguments>
+                                        <!-- https://maven.apache.org/guides/mini/guide-encryption.html -->
+                                        <!-- https://central.sonatype.org/pages/apache-maven.html#distribution-management-and-authentication -->
                                         <arg>--pinentry-mode</arg>
                                         <arg>loopback</arg>
                                     </gpgArguments>
@@ -318,7 +357,10 @@
                             </execution>
                         </executions>
                     </plugin>
+
+                    <!-- DEPLOYMENT -->
                     <plugin>
+                        <!-- https://central.sonatype.org/publish/publish-portal-maven/#plugin-configuration-options -->
                         <groupId>org.sonatype.central</groupId>
                         <artifactId>central-publishing-maven-plugin</artifactId>
                         <version>${central-publishing-maven-plugin.version}</version>
@@ -327,6 +369,7 @@
                             <publishingServerId>central</publishingServerId>
                             <autoPublish>true</autoPublish>
                             <deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
+                            <!--                                <ignorePublishedComponents>true</ignorePublishedComponents>-->
                         </configuration>
                     </plugin>
                 </plugins>
